Add cf push with manifest.yml